# cgo-zig-vcpkg-cross

./: CMakeLists.txt  build.sh  go.mod  main.go  readme.md  zig-ar.cmd  zig-ar.sh  zig-ranlib.cmd  zig-ranlib.sh
src/: main.cpp
triplets/: zig-linux-toolchain.cmake  zig-linux.cmake  zig-windows-toolchain.cmake  zig-windows.cmake
